# taric-match

./: .gitignore  PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
taric_match/: __init__.py  main.py
taric_match/api/: __init__.py  client.py
taric_match/cli/: __init__.py  commands.py
taric_match/utils/: __init__.py
tests/: __init__.py  test_api.py
